adding and fixing avatar

--- a/Art101-P5Avatar/index.html
+++ b/Art101-P5Avatar/index.html
@@ -22,14 +22,36 @@
     </header>
 </body>
 
+<body>
   <div class="mySketch">
-    <script src="sketch.js"></script>
-    <script src="Hat.js"></script>  
-    <script src="Confetti.js"></script>
+      <script src="sketch.js"></script>
+      <script src="Hat.js"></script>  
+      <script src="Confetti.js"></script>
+
+      <p class="imageDesc">
+        Hello this is the Description
+      </p>    
   </div>
-  
-  <p class="imageDesc">
-    Hello this is the Description
- </p>
- 
+
+  <div class ="codingImgs"> 
+      <img class ="codingPic" src="/Assets/AvatarCoding.PNG">
+        <p class="imageDesc">This is the start of the code where I initialized all the values I used. </p>
+
+      <img class ="codingPic" src="/Assets/AvatarCoding2.PNG">
+      <p class="imageDesc">2nd Description</p>
+
+      <img class ="codingPic" src="/Assets/AvatarCoding3.PNG">
+        <p class="imageDesc">3rd Description</p>
+
+      <img class ="codingPic" src="/Assets/AvatarCoding4.PNG">
+      <p class="imageDesc">4th Description</p>
+
+      <img class ="codingPic" src="/Assets/AvatarCodingConfetti.PNG">
+      <p class="imageDesc">This piece of code creates the confetti seen at the end of the project. The confetti is created and given the command to move in this file.</p>
+
+      <img class ="codingPic" src="/Assets/AvatarCodingHat.PNG">
+      <p class="imageDesc">This code was created for the Hat</p>
+  </div>
+
+</body>
   </html>
