--- a/index.html
+++ b/index.html
@@ -128,8 +128,7 @@
 				<p>
 					"What we want to do" was created with the intent to show how people struggle with trying to find
 					jobs in
-					this society a9+
-					nd how their own self doubt could make their situation worse.
+					this society and how their own self doubt could make their situation worse.
 				</p>
 			</div>
 		</div>
@@ -165,14 +164,13 @@
 		<div class="column" id="Avatar">
 			<h2> <b><a id="webLink" href="Art101-P5Avatar/index.html">
 				Avatar project </a></b></h2>
-
+				
 			<div class="Description">
 				<p>
 					This is the avatar description
 				</p>
 			</div>
 		</div>
-		
 		
 	</div>
 </body>
