--- a/TheBook.html
+++ b/TheBook.html
@@ -25,6 +25,11 @@
 <body>
 
   <div class = PHOTimage>
+
+    <p>
+      The Book is a photo series that explores scale and perspective to push the boundaries of an otherwise mundane world. We, as a species, have established ourselves at the top of the hierarchy of beings. Some believe there is a celestial force or entity that is greater, but nothing within the current realm of knowledge. A 1-story building may be trivial to us, but that same building would seem immeasurable to an ant. The figurine brings the vastness of our universe into perspective. It scales down a world that we have lost appreciation for, allowing the viewer to superimpose themselves onto the figurine and see their existence in a new light.
+    </p>
+
     <h1>Untitled, 2020</h1>
     <img src="Assets/Book image-1.jpg" alt="The Book" width="950px" , height="700px">
     <p class="imageDesc">
