--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<section id="showcase">
 		<div class="intro">
 			<h1>My art</h1>
-			<p>Welcome to my art portfolio. Please click on any of the titles to be taken to its respective page</p>
+			<p>Welcome to my art portfolio. Please click on any of the titles of the artworks to be taken to its respective page</p>
 		</div>
 	</section>
 
@@ -151,7 +151,7 @@
 		<!-- Randomizer	 -->
 		<div class="column" id="Rando">
 			<h2> <b><a id="webLink" href="Art101-Randomizer/index.html">
-				Randzomier </a></b></h2>
+				Randomizer </a></b></h2>
 
 			<div class="Description">
 				<p>
