--- a/Art101-P5Avatar/index.html
+++ b/Art101-P5Avatar/index.html
@@ -22,7 +22,7 @@
     </header>
 </body>
 
-<body>
+<body class="sketchdesc">
   <div class="mySketch">
       <script src="sketch.js"></script>
       <script src="Hat.js"></script>  
