--- a/MentalAnguish.html
+++ b/MentalAnguish.html
@@ -25,6 +25,7 @@
   <body>
 
     <div class = "model">
+    <h1>Mental Anguish, 2018, Art Media</h1>
       <iframe width="1000" height="750" src="https://sketchfab.com/models/8ea0d0d7a2a0428da54c2ab8724718a3/embed"
 				frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true">
 			</iframe>
