--- a/OurPhoneyAffections.html
+++ b/OurPhoneyAffections.html
@@ -25,11 +25,14 @@
   <body>
 
     <div class = "video">
+      <h1>Our Phoney Affections, 2018, Art Media</h1>
       <iframe width="1150" height="750" src="https://www.youtube.com/embed/VkVWqX0zaqo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 
     <p class="imageDesc">
-      Our Phoney Affections is an analysis of modern society and how people can be so close to each other, yet remain distant. Though each scene in the film is different, the motif remains constant: a connection to mobile devices leading to a personal disconnection. The utilization of glitching in the piece signifies a malfunction of society, with the lack of interactivity between the subjects leaving the viewer with a moment of introspection.
+      Our Phoney Affections is an analysis of modern society and how people can be so close to each other, yet remain distant. Though each scene in the film is different, the motif 
+      remains constant: a connection to mobile devices leading to a personal disconnection. The utilization of glitching in the piece signifies a malfunction of society, with the lack of 
+      interactivity between the subjects leaving the viewer with a moment of introspection.
     </p>
 
   </body>
