--- a/SunThing.html
+++ b/SunThing.html
@@ -21,9 +21,17 @@
       </div>
     </header>
   </body>
-  
+
+  <div class = sunThing>
+    <h1>Sun Drug, 2020, Art Media</h1>
     <script src="Art 74 Stuff/JS/p5.js" type="text/javascript"></script>
     <script src="Art 74 Stuff/JS/p5.dom.js" type="text/javascript"></script>
     <script src="Art 74 Stuff/JS/p5.sound.js" type="text/javascript"></script>
     <script src="Art 74 Stuff/JS/sketch.js" type="text/javascript"></script>
+  </div>
+
+  <p class="sketchDesc">
+    "Sun drug" is a concept I thought of when I first started using Processing. At the time, I 
+  </p>
+
 </html>
