--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 			<div class="Description">
 				<p>
-					This piece was my first attempt at 3D Modeling using Sketchfab. Although My focus for this project
+					This piece was my first attempt at 3D Modeling using Sketchfab. My focus for this project
 					was how one can be tortured by their past.
 				</p>
 			</div>
@@ -73,20 +73,20 @@
 
 			<div class="Description">
 				<p>
-					This piece was created while I was in Art 75.
+					This piece is made with video samples found online. I made the piece wanting to criticize how much 
 				</p>
 			</div>
 		</div>
 
 		<!-- The Book Project -->
 		<div class="column" id="TheBook">
-			<h2><a target="_blank" href="TheBook.html">The Book</a></h2>
+			<h2><a target="_blank" href="TheBook.html">Small Scale</a></h2>
 
 			<img src="Assets/Book image-1.jpg" alt="Glitch Art" width="600px" , height="500px">
 
 			<div class="Description">
 				<p>
-					This was created during my time in Phot 40.
+					This was created during my time in Phot 40 at SJSU when I was still learning what I can do with a real camera. Its inspiration came while I was sitting on my balcony in a chair, just thinking about how small I am compared to the greater universe.
 				</p>
 			</div>
 		</div>
@@ -98,7 +98,7 @@
 			<div class="Description">
 				<p>
 					"A Knights Duty" was my first attempt at creating a website using HTML and CSS. Its inspiration
-					was the choose your own adventure games that are not commonly seen in today's age.
+					was the choose your own adventure books that are not commonly seen in today's age. 
 				</p>
 			</div>
 		</div>
@@ -138,25 +138,12 @@
 
 			<div class="Description">
 				<p>
-					"Sun Drug" was a concept that I had during my first semester in college. When I first learned about
-					P5,
-					I had recently learned about the effects of drugs on ones brain in my Health class so I got the
-					inspiration for Sun Drug from that.
+					"Sun Drug" is a concept that I had during my first semester in college. When I first started working with
+					P5 and coding, I had recently learned about the effects of drugs on ones brain in my Health class at the time which is where I got the
+					inspiration for Sun Drug.
 				</p>
 			</div>
 		</div>
-
-		<!-- Randomizer	 -->
-		<div class="column" id="Rando">
-			<h2> <b><a id="webLink" href="Art101-Randomizer/index.html">
-				Randomizer </a></b></h2>
-
-			<div class="Description">
-				<p>
-					This is the randomizer description
-				</p>
-			</div>
-		</div>		
 
 		<!-- P5 Avatar -->
 		<div class="column" id="Avatar">
@@ -165,10 +152,22 @@
 				
 			<div class="Description">
 				<p>
-					This is the avatar description
+					The Avatar project is a piece made while exploring the possibilities of JavaScript using P5 JS. Before this, I had not worked with JavaScript in order to create a set figure/character.
 				</p>
 			</div>
 		</div>
+
+		<!-- Randomizer	 -->
+		<div class="column" id="Rando">
+			<h2> <b><a id="webLink" href="Art101-Randomizer/index.html">
+				Randomizer project</a></b></h2>
+
+			<div class="Description">
+				<p>
+					The randomizer project is one made that I for myself. The piece is made with JavaScript, it was me experimenting and trying to learn what I can do regarding adding images and implementing arrays to the canvas.
+				</p>
+			</div>
+		</div>		
 		
 	</div>
 </body>
