--- a/TheBook.html
+++ b/TheBook.html
@@ -27,97 +27,68 @@
   <div class = PHOTimage>
 
     <p>
-      The Book is a photo series that explores scale and perspective to push the boundaries of an otherwise mundane world. We, as a species, have established ourselves at the top of the hierarchy of beings. Some believe there is a celestial force or entity that is greater, but nothing within the current realm of knowledge. A 1-story building may be trivial to us, but that same building would seem immeasurable to an ant. The figurine brings the vastness of our universe into perspective. It scales down a world that we have lost appreciation for, allowing the viewer to superimpose themselves onto the figurine and see their existence in a new light.
+      Small Scale is a photo series that explores scale and perspective to push the boundaries of an otherwise mundane world. We, as a species, have established ourselves at the top of the hierarchy of beings. Some believe there is a celestial force or entity that is greater, but nothing within the current realm of knowledge. A 1-story building may be trivial to us, but that same building would seem immeasurable to an ant. The figurine brings the vastness of our universe into perspective. It scales down a world that we have lost appreciation for, allowing the viewer to superimpose themselves onto the figurine and see their existence in a new light.
     </p>
 
-    <h1>Untitled, 2020</h1>
+    <h1>Untitled, 2020, Photography</h1>
     <img src="Assets/Book image-1.jpg" alt="The Book" width="950px" , height="700px">
-    <p class="imageDesc">
-      This is the first image
-    </p>
 
-    <h1>Untitled, 2020</h1>
+
+    <h1>Untitled, 2020, Photography</h1>
     <img src="Assets/Book image-2.jpg" alt="The Book" width="950px" , height="700px">
-    <p class="imageDesc">
-      This is the second image
-    </p>
 
-    <h1>Untitled, 2020</h1>
+
+    <h1>Untitled, 2020, Photography</h1>
     <img src="Assets/Book image-3.jpg" alt="The Book" width="950px" , height="700px">
-    <p class="imageDesc">
-      This is the third image
-    </p>
 
-    <h1>Untitled, 2020</h1>
+
+    <h1>Untitled, 2020, Photography</h1>
     <img src="Assets/Book image-4.jpg" alt="The Book" width="950px" , height="700px">
-    <p class="imageDesc">
-      This is the fourth image
-    </p>
 
-    <h1>Untitled, 2020</h1>
+
+    <h1>Untitled, 2020, Photography</h1>
     <img src="Assets/Book image-5.jpg" alt="The Book" width="950px" , height="700px">
-    <p class="imageDesc">
-      This is the fifth image
-    </p>
 
-    <h1>Untitled, 2020</h1>
+
+    <h1>Untitled, 2020, Photography</h1>
     <img src="Assets/Book image-6.jpg" alt="The Book" width="950px" , height="700px">
-    <p class="imageDesc">
-      This is the sixth image
-    </p>
 
-    <h1>Untitled, 2020</h1>
+
+    <h1>Untitled, 2020, Photography</h1>
     <img src="Assets/Book image-7.jpg" alt="The Book" width="950px" , height="700px">
-    <p class="imageDesc">
-      This is the seventh image
-    </p>
 
-    <h1>Untitled, 2020</h1>
+
+    <h1>Untitled, 2020, Photography</h1>
     <img src="Assets/Book image-8.jpg" alt="The Book" width="950px" , height="700px">
-    <p class="imageDesc">
-      This is the eighth image
-    </p>
 
-    <h1>Untitled, 2020</h1>
+
+    <h1>Untitled, 2020, Photography</h1>
     <img src="Assets/Book image-9.jpg" alt="The Book" width="950px" , height="700px">
-    <p class="imageDesc">
-      This is the ninth image
-    </p>
 
-    <h1>Untitled, 2020</h1>
+
+    <h1>Untitled, 2020, Photography</h1>
     <img src="Assets/Book image-10.jpg" alt="The Book" width="950px" , height="700px">
-    <p class="imageDesc">
-      This is the tenth image
-    </p>
 
-    <h1>Untitled, 2020</h1>
+
+    <h1>Untitled, 2020, Photography</h1>
     <img src="Assets/Book image-11.jpg" alt="The Book" width="950px" , height="700px">
-    <p class="imageDesc">
-      This is the eleventh image
-    </p>
 
-    <h1>Untitled, 2020</h1>
+
+    <h1>Untitled, 2020, Photography</h1>
     <img src="Assets/Book image-12.jpg" alt="The Book" width="950px" , height="700px">
-    <p class="imageDesc">
-      This is the twelveth image
-    </p>
 
+
+    <h1>Untitled, 2020, Photography</h1>
     <img src="Assets/Book image-13.jpg" alt="The Book" width="950px" , height="700px">
-    <p class="imageDesc">
-      This is the thirteenth image
-    </p>
 
-    <h1>Untitled, 2020</h1>
+
+    <h1>Untitled, 2020, Photography</h1>
     <img src="Assets/Book image-14.jpg" alt="The Book" width="950px" , height="700px">
-    <p class="imageDesc">
-      This is the fourteenth image
-    </p>
 
-    <h1>Untitled, 2020</h1>
+
+    <h1>Untitled, 2020, Photography</h1>
     <img src="Assets/Book image-15.jpg" alt="The Book" width="950px" , height="700px">
-    <p class="imageDesc">
-      This is the fifteenth image
-    </p>
+
   </div>
 
 </body>
