chanigng book name

--- a/SmallScale.html
+++ b/SmallScale.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>TheBook</title>
+    <title>SmallScale</title>
     <link rel="stylesheet" type="text/css" href="css/WebStyle.css">
   </head>
 
@@ -10,7 +10,7 @@
     <header>
       <div class="container">
         <div id="branding">
-          <h1>The Book</h1>
+          <h1>Small Scale</h1>
         </div>
         <nav>
           <ul>
