--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 		<!-- The Book Project -->
 		<div class="column" id="TheBook">
-			<h2><a target="_blank" href="TheBook.html">Small Scale</a></h2>
+			<h2><a target="_blank" href="SmallScale.html">Small Scale</a></h2>
 
 			<img src="Assets/Book image-1.jpg" alt="Glitch Art" width="600px" , height="500px">
 
