--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 		</div>
 
 	</header>
+
 	<section id="showcase">
 		<div class="intro">
 			<h1>My art</h1>
@@ -58,7 +59,7 @@
 			<div class="Description">
 				<p>
 					This piece was my first attempt at 3D Modeling using Sketchfab. My focus for this project
-					was how one can be tortured by their past.
+					was how one can be tortured by their past and how it can infect their minds.
 				</p>
 			</div>
 		</div>
@@ -73,7 +74,8 @@
 
 			<div class="Description">
 				<p>
-					This piece is made with video samples found online. I made the piece wanting to criticize how much 
+					This piece is made with video samples found online. Initially, I thought it would be really difficult to find footage with what I wanted, people largely ignoring each other while in close proximity. I got the inspiration from 
+					one day when I was on the train going home, but it was completely silent. Not a soul was talking when we were all almost shoulder to shoulder. 
 				</p>
 			</div>
 		</div>
@@ -86,10 +88,49 @@
 
 			<div class="Description">
 				<p>
-					This was created during my time in Phot 40 at SJSU when I was still learning what I can do with a real camera. Its inspiration came while I was sitting on my balcony in a chair, just thinking about how small I am compared to the greater universe.
+					This was created during my time in Phot 40 at SJSU when I was still learning what I can do with a real camera. Its inspiration came while 
+					I was sitting on my balcony in a chair, just thinking about how small I am compared to the greater universe.
 				</p>
 			</div>
 		</div>
+
+		<!-- Sun Drug -->
+		<div class="column" id="SunDrug">
+			<h2> <b><a id="webLink" href="SunThing.html">
+				[EPILEPSY WARNING] Sun Drug </a></b></h2>
+
+			<div class="Description">
+				<p>
+					"Sun Drug" is a concept that I had during my first semester in college. When I first started working with
+					P5 and coding, I had recently learned about the effects of drugs on ones brain in my Health class at the time which is where I got the
+					inspiration for Sun Drug.
+				</p>
+			</div>
+		</div>
+
+		<!-- P5 Avatar -->
+		<div class="column" id="Avatar">
+			<h2> <b><a id="webLink" href="Art101-P5Avatar/index.html">
+				Avatar project </a></b></h2>
+				
+			<div class="Description">
+				<p>
+					The Avatar project is a piece made while exploring the possibilities of JavaScript using P5 JS. Before this, I had not worked with JavaScript in order to create a set figure/character.
+				</p>
+			</div>
+		</div>
+
+		<!-- Randomizer	 -->
+		<div class="column" id="Rando">
+			<h2> <b><a id="webLink" href="Art101-Randomizer/index.html">
+				Randomizer project</a></b></h2>
+
+			<div class="Description">
+				<p>
+					The randomizer project is one made that I for myself. The piece is made with JavaScript, it was me experimenting and trying to learn what I can do regarding adding images and implementing arrays to the canvas.
+				</p>
+			</div>
+		</div>	
 
 		<!-- Knight's Life -->
 		<div class="column" id="Knight'sLife">
@@ -125,49 +166,10 @@
 			<div class="Description">
 				<p>
 					"What we want to do" was created with the intent to show how people struggle with trying to find
-					jobs in
-					this society and how their own self doubt could make their situation worse.
+					jobs in this society and how their own self doubt actually sabotages them.
 				</p>
 			</div>
 		</div>
-
-		<!-- Sun Drug -->
-		<div class="column" id="SunDrug">
-			<h2> <b><a id="webLink" href="SunThing.html">
-				[EPILEPSY WARNING] Sun Drug (Click Me) </a></b></h2>
-
-			<div class="Description">
-				<p>
-					"Sun Drug" is a concept that I had during my first semester in college. When I first started working with
-					P5 and coding, I had recently learned about the effects of drugs on ones brain in my Health class at the time which is where I got the
-					inspiration for Sun Drug.
-				</p>
-			</div>
-		</div>
-
-		<!-- P5 Avatar -->
-		<div class="column" id="Avatar">
-			<h2> <b><a id="webLink" href="Art101-P5Avatar/index.html">
-				Avatar project </a></b></h2>
-				
-			<div class="Description">
-				<p>
-					The Avatar project is a piece made while exploring the possibilities of JavaScript using P5 JS. Before this, I had not worked with JavaScript in order to create a set figure/character.
-				</p>
-			</div>
-		</div>
-
-		<!-- Randomizer	 -->
-		<div class="column" id="Rando">
-			<h2> <b><a id="webLink" href="Art101-Randomizer/index.html">
-				Randomizer project</a></b></h2>
-
-			<div class="Description">
-				<p>
-					The randomizer project is one made that I for myself. The piece is made with JavaScript, it was me experimenting and trying to learn what I can do regarding adding images and implementing arrays to the canvas.
-				</p>
-			</div>
-		</div>		
 		
 	</div>
 </body>
