--- a/SunThing.html
+++ b/SunThing.html
@@ -24,6 +24,7 @@
 
   <div class = sunThing>
     <h1>Sun Drug, 2020, Art Media</h1>
+    <h2 class="interact">Move your mouse to the right to interact with the piece</h2>
     <script src="Art 74 Stuff/JS/p5.js" type="text/javascript"></script>
     <script src="Art 74 Stuff/JS/p5.dom.js" type="text/javascript"></script>
     <script src="Art 74 Stuff/JS/p5.sound.js" type="text/javascript"></script>
@@ -31,7 +32,9 @@
   </div>
 
   <p class="sketchDesc">
-    "Sun drug" is a concept I thought of when I first started using Processing. At the time, I 
+    "Sun drug" is a concept I thought of when I first started using Processing. Its inspiration was a lesson in my health class at the time of creation, it was regarding drugs (specifically hallucinogens).
+    With this, I decided to create a piece that many people can look at, but won't see the same thing and is very difficult to look at. It took me a long time to explore the shapes and sizes I wanted, but eventually I landed on what the piece is now.
+    The color being random is meant to replicate the hallucinations that one may sees on hallucinogens. What do you see when you look at it?
   </p>
 
 </html>
