--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 			<div class="Description">
 				<p>
 					"What we want to do" was created with the intent to show how people struggle with trying to find
-					jobs in this society and how their own self doubt actually sabotages them.
+					jobs in this society and how their own self doubt causes them to self-sabotage.
 				</p>
 			</div>
 		</div>
