--- a/Art101-P5Avatar/index.html
+++ b/Art101-P5Avatar/index.html
@@ -29,28 +29,24 @@
       <script src="Confetti.js"></script>
 
       <p class="imageDesc">
-        Hello this is the Description
+        For this project, I wanted to explore what I could do with coding and how far my current knowledge could get me as I had never created an interactable character before. For this project, I google mapped the directions to destinations that I went to a lot or that I really enjoyed, which included San Jose State University as well as my workplace at the time.
+        I took the mappings and then transferred them to a grid where, with the boxes of the grid, it created a pixel art looking avatar. I was satisfied with the avatar but I had to make it special somehow. I used Processing to code the avatar and give it proper form. 
+        So in order to make it special, I wanted to have the user be able to interact with the piece, so I decided to make it into a game for the viewer. I learned a lot with this project and I look forward to using that knowledge on future projects.
       </p>    
   </div>
 
   <div class ="codingImgs"> 
       <img class ="codingPic" src="/Assets/AvatarCoding.PNG">
-        <p class="imageDesc">This is the start of the code where I initialized all the values I used. </p>
 
       <img class ="codingPic" src="/Assets/AvatarCoding2.PNG">
-      <p class="imageDesc">2nd Description</p>
 
       <img class ="codingPic" src="/Assets/AvatarCoding3.PNG">
-        <p class="imageDesc">3rd Description</p>
 
       <img class ="codingPic" src="/Assets/AvatarCoding4.PNG">
-      <p class="imageDesc">4th Description</p>
 
       <img class ="codingPic" src="/Assets/AvatarCodingConfetti.PNG">
-      <p class="imageDesc">This piece of code creates the confetti seen at the end of the project. The confetti is created and given the command to move in this file.</p>
 
       <img class ="codingPic" src="/Assets/AvatarCodingHat.PNG">
-      <p class="imageDesc">This code was created for the Hat</p>
   </div>
 
 </body>
