--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 			<div class="Description">
 				<p>
-					The randomizer project is one made that I for myself. The piece is made with JavaScript, it was me experimenting and trying to learn what I can do regarding adding images and implementing arrays to the canvas.
+					The randomizer project is one made that I for myself. Its inspiration was the pandemic and how it has made it very difficult to choose what to do in everyday life.
 				</p>
 			</div>
 		</div>	
