--- a/Art101-Randomizer/index.html
+++ b/Art101-Randomizer/index.html
@@ -22,28 +22,29 @@
     </header>
 </body>
 
+<div class="sketchdesc">
+  <div id = "mySketch">
+    <script src="p5.js" type="text/javascript"></script>
+    <script src="sketch.js" type="text/javascript"></script>
 
-<div id = "mySketch">
-  <script src="p5.js" type="text/javascript"></script>
-  <script src="sketch.js" type="text/javascript"></script>
-  <p class="imageDesc">
-    The randomizer was made with the pandemic in mind, but it was also me learning and experimenting with arrays in JavaScript coding. The pandemic has caused us to stay home everyday which has led us to relieving our boredom dy doing whatever we can at home.
-    For I, and many others, playing video games has relieved our boredom. However because the pandemic has lasted so long, it has gotten extremely difficult to pick what to do. Every single day, we do our favorite activities that eventually it becomes nothingness and meaningless.
-    I decided to center my randomizer around games that my friends and I have been playing so that we can easily know what we should play together. 
-  </p>
+    <p class="imageDesc">
+      The randomizer was made with the pandemic in mind, but it was also me learning and experimenting with arrays in JavaScript coding. The pandemic has caused us to stay home everyday which has led us to relieving our boredom dy doing whatever we can at home.
+      For I, and many others, playing video games has relieved our boredom. However because the pandemic has lasted so long, it has gotten extremely difficult to pick what to do. Every single day, we do our favorite activities that eventually it becomes nothingness and meaningless.
+      I decided to center my randomizer around games that my friends and I have been playing so that we can easily know what we should play together. 
+    </p>
+  </div>
+
+  <div class ="codingImgs"> 
+    <img class ="codingPic" src="/Assets/Randomizer Coding.PNG">
+    
+    <img class ="codingPic" src="/Assets/Randomizer Coding 2.PNG">
+  </div>
+
+  <div class = "" id = "controlsDiv">
+    <button type="button" id="randButton">Click once to randomize</button>
+  </div>
+
 </div>
-
-<div class ="codingImgs"> 
-  <img class ="codingPic" src="/Assets/Randomizer Coding.PNG">
-  
-  <img class ="codingPic" src="/Assets/Randomizer Coding 2.PNG">
-</div>
-
-<div class = "" id = "controlsDiv">
-  <button type="button" id="randButton">Click once to randomize</button>
-</div>
-
-
 
 
 </html>
