--- a/GlitchArtProject.html
+++ b/GlitchArtProject.html
@@ -22,7 +22,7 @@
     </header>
   </body>
 
-
+<div class="BodyforGAimage">
     <div class = GAimage>
     <h1>Twisted, 2018, Art Media</h1>
      <img src="Assets/Glitch Art Projectpsd.png" alt="Glitch Art" width="1250px" , height="850px">
@@ -31,6 +31,6 @@
     <p class="imageDesc">
      Twisted is inspired by loot boxes in video games and their representation in life. In loot boxes, players have a small chance of obtaining a rare legendary item from these boxes, but are often given common items instead. They are met with the grandeur of opening a reward, but disappointed with something undesirable. This duplicity is mirrored in real life. Many experiences in life exist under the facade of 'good times', but can easily turn into a lesson learned Life is full of ups and downs, but it’s important to remember that eventually you will find something worth. Even if things aren't going your way, no matter how many times you're unlucky with the roll of the dice, life is a game of probabilities. Nothing in life is a 0% chance. Though the chances may be slim, there will always be a chance to land upon a diamond in the rough. A legendary amongst commons. And there's always more than one. Though the legendary may not turn out to be what you thought, you keep pushing through. You keep opening the boxes in the hopes to hit that small chance of a legendary, eventually it will happen. Maybe you won’t like what you get, but you will always have the chance of getting another.
     </p>
-    
+  </div>    
 
 </html>
