--- a/MentalAnguish.html
+++ b/MentalAnguish.html
@@ -22,7 +22,7 @@
     </header>
   </body>
 
-  <body>
+  <div class="BodyforGAimage">
 
     <div class = "model">
     <h1>Mental Anguish, 2018, Art Media</h1>
@@ -35,6 +35,6 @@
       Mental Anguish is an exploration of self-reflection and consciousness. The mind can be overwhelmed with darkness. A plague that continues to infect even the most cherished and secluded places. Its shadowy tendrils reaching out to snuff the light. Mistakes... Regrets... Failures... Waves crashing again and again against the hull of mental fortitude. An endless journey of survival in the roughest of storms to reach a treasure that has only been spoken of, but never seen.
     </p>
 
-  </body>
+  </div>
 
 </html>
