--- a/OurPhoneyAffections.html
+++ b/OurPhoneyAffections.html
@@ -22,7 +22,7 @@
     </header>
   </body>
 
-  <body>
+  <div class="BodyforGAimage">
 
     <div class = "video">
       <h1>Our Phoney Affections, 2018, Art Media</h1>
@@ -35,6 +35,6 @@
       interactivity between the subjects leaving the viewer with a moment of introspection.
     </p>
 
-  </body>
+  </div>
 
 </html>
