fixing image links

--- a/Art101-P5Avatar/index.html
+++ b/Art101-P5Avatar/index.html
@@ -36,17 +36,17 @@
   </div>
 
   <div class ="codingImgs"> 
-      <img class ="codingPic" src="/Assets/AvatarCoding.PNG">
+      <img class ="codingPic" src="./Assets/AvatarCoding.png">
 
-      <img class ="codingPic" src="/Assets/AvatarCoding2.PNG">
+      <img class ="codingPic" src="./Assets/AvatarCoding2.png">
 
-      <img class ="codingPic" src="/Assets/AvatarCoding3.PNG">
+      <img class ="codingPic" src="/Assets/AvatarCoding3.png">
 
-      <img class ="codingPic" src="/Assets/AvatarCoding4.PNG">
+      <img class ="codingPic" src="/Assets/AvatarCoding4.png">
 
-      <img class ="codingPic" src="/Assets/AvatarCodingConfetti.PNG">
+      <img class ="codingPic" src="/Assets/AvatarCodingConfetti.png">
 
-      <img class ="codingPic" src="/Assets/AvatarCodingHat.PNG">
+      <img class ="codingPic" src="/Assets/AvatarCodingHat.png">
   </div>
 
 </body>
