--- a/Art101-Randomizer/index.html
+++ b/Art101-Randomizer/index.html
@@ -35,9 +35,9 @@
   </div>
 
   <div class ="codingImgs"> 
-    <img class ="codingPic" src="/Assets/Randomizer Coding.PNG">
+    <img class ="codingPic" src="/Assets/Randomizer Coding.png">
     
-    <img class ="codingPic" src="/Assets/Randomizer Coding 2.PNG">
+    <img class ="codingPic" src="/Assets/Randomizer Coding 2.png">
   </div>
 
   <div class = "" id = "controlsDiv">
