--- a/Art101-Randomizer/index.html
+++ b/Art101-Randomizer/index.html
@@ -35,9 +35,9 @@
   </div>
 
   <div class ="codingImgs"> 
-    <img class ="codingPic" src="/Assets/Randomizer Coding.png">
+    <img class ="codingPic" src="/Assets/Randomizer Coding.png" width="607px" , height="1164px">
     
-    <img class ="codingPic" src="/Assets/Randomizer Coding 2.png">
+    <img class ="codingPic" src="/Assets/Randomizer Coding 2.png" width="706px" , height="1029px">
   </div>
 
   <div class = "" id = "controlsDiv">
