--- a/Art101-P5Avatar/index.html
+++ b/Art101-P5Avatar/index.html
@@ -36,17 +36,17 @@
   </div>
 
   <div class ="codingImgs"> 
-      <img class ="codingPic" src="/Assets/AvatarCoding.png" width="841px" , height="1084px">
+      <img class ="codingPic" src="../Assets/AvatarCoding.png" width="841px" , height="1084px">
 
-      <img class ="codingPic" src="/Assets/AvatarCoding2.png" width="718px" , height="1313px">
+      <img class ="codingPic" src="../Assets/AvatarCoding2.png" width="718px" , height="1313px">
 
-      <img class ="codingPic" src="/Assets/AvatarCoding3.png" width="656px" , height="1177px">
+      <img class ="codingPic" src="../Assets/AvatarCoding3.png" width="656px" , height="1177px">
 
-      <img class ="codingPic" src="/Assets/AvatarCoding4.png" width="605px" , height="1133px">
+      <img class ="codingPic" src="../Assets/AvatarCoding4.png" width="605px" , height="1133px">
 
-      <img class ="codingPic" src="/Assets/AvatarCodingConfetti.png" width="427px" , height="430px">
+      <img class ="codingPic" src="../Assets/AvatarCodingConfetti.png" width="427px" , height="430px">
 
-      <img class ="codingPic" src="/Assets/AvatarCodingHat.png" width="387px" , height="397px">
+      <img class ="codingPic" src="../Assets/AvatarCodingHat.png" width="387px" , height="397px">
   </div>
 
 </body>
